Clean up code (same as previous commit changes weren't saved) and fix overlapping cards with buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,7 @@ h1 {
 /* Games area - container style */
 .games-area {
     background-color: var(--highlight);
-    display: flex; 
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -126,17 +126,24 @@ h1 {
 
 
 /* Cards area - container style */
+.card-container {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    margin-top: 50px;
+    align-items: center;
+    justify-content: center;
+}
+
 .cards-area {
     /* Inspiration taken from "Coding Made Simple" - styling cards in CSS with a 3D effect */
     display: grid;
     grid-template-columns: repeat(4, 150px);
     grid-template-rows: repeat(4, 150px);
-    width: 100%;
-    gap: 15px;
+    gap: 10px;
     align-items: center;
-    padding: 10px;
-    margin: 25px;
-    position: relative;
+    justify-content: center;
+    margin: 10px;
 }
 
 .card {
@@ -144,7 +151,6 @@ h1 {
     width: 100%;
     height: 100%;
     perspective: 1000px;
-    /* 3D animation */
     cursor: pointer;
 }
 
@@ -154,20 +160,17 @@ h1 {
     height: 100%;
     text-align: center;
     box-shadow: 5px 5px 2px 0px rgba(19, 21, 38, 0.6);
-    /* add the box shadow around the cards */
     transform: transform 0s;
     transform-style: preserve-3d;
 }
 
 .card.clicked .card-inner {
     transform: rotateY(180deg);
-    /* Flips the card*/
     background-color: white;
 }
 
 .card.matched .card-back {
     filter: brightness(50%);
-    /* Dims the brightness of the matched cards*/
     transform: scale(1.0);
     background-color: white;
     cursor: none;
@@ -183,7 +186,6 @@ h1 {
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
-    /* the back of the card is hidden */
 }
 
 .card-front {
@@ -208,49 +210,48 @@ h1 {
 /* Score and attempts left*/
 footer {
     background-color: rgba(12, 12, 20, 0.8);
-    max-height: 150px;
     color: var(--highlight);
     position: relative;
+    width: 100%;
+    height: 100%;
 }
 
 .score-and-attempts-area {
     display: flex;
     flex-direction: row;
-    width: 100%;
+    max-width: 1300px;
+    align-items: center;
+    justify-content: center;
 }
 
 .matched-area,
 .attempts-area {
     width: 50%;
     display: flex;
-    justify-content: end;
     font-size: xx-large;
 }
 
 .matched-cards,
 .attempts-made {
-    width: 50%;
+    width: 100%;
     display: flex;
     justify-content: center;
     font-size: xx-large
 }
 
 .github {
+    display: flex;
     color: var(--highlight);
     padding: 10px;
+    align-items: center;
+    justify-content: center;
 }
+
 /* Media query: extra small devices, phones) */
 @media screen and (max-width: 575px) {
     .cards-area {
-        display: grid;
         grid-template-columns: repeat(4, 70px);
-        /* Creates a 4 x 4 grid*/
         grid-template-rows: repeat(4, 70px);
-        width: max-content;
-        gap: 10px;
-        align-items: center;
-        padding: 5px;
-        margin: 10px;
     }
 
     .matched-area,
@@ -268,15 +269,8 @@ footer {
 /* Media query: small devices (576px and up) */
 @media screen and (min-width: 576px) {
     .cards-area {
-        display: grid;
         grid-template-columns: repeat(4, 100px);
         grid-template-rows: repeat(4, 100px);
-        width: max-content;
-        gap: 10px;
-        max-width: 1200px;
-        align-items: center;
-        padding: 5px;
-        margin: 10px;
     }
 
     .matched-area,
@@ -294,15 +288,8 @@ footer {
 /* Media query: medium devices (768px and up) */
 @media screen and (min-width: 768px) {
     .cards-area {
-        display: grid;
-        grid-template-columns: repeat(4, 110px);
-        grid-template-rows: repeat(4, 110px);
-        width: max-content;
-        gap: 10px;
-        max-width: 1200px;
-        align-items: center;
-        padding: 5px;
-        margin: 10px;
+        grid-template-columns: repeat(4, 100px);
+        grid-template-rows: repeat(4, 100px);
     }
 
     .matched-area,
@@ -319,15 +306,9 @@ footer {
 /* Media query: large devices (992px and up) */
 @media screen and (min-width: 992px) {
     .cards-area {
-        display: grid;
         grid-template-columns: repeat(4, 130px);
         grid-template-rows: repeat(4, 130px);
-        width: max-content;
-        gap: 10px;
-        max-width: 1200px;
-        align-items: center;
-        padding: 5px;
-        margin: 10px;
+        gap: 15px;
     }
 
     .matched-area,
@@ -344,15 +325,9 @@ footer {
 /* Media query: extra large devices (1200px and up) */
 @media screen and (min-width: 1200px) {
     .cards-area {
-        display: grid;
         grid-template-columns: repeat(4, 180px);
         grid-template-rows: repeat(4, 180px);
-        width: max-content;
-        gap: 10px;
-        max-width: 1200px;
-        align-items: center;
-        padding: 5px;
-        margin: 10px;
+        gap: 15px;
     }
 
     .matched-area,
